thêm export cho điểm

--- a/app/src/main/res/layout/activity_score_student.xml
+++ b/app/src/main/res/layout/activity_score_student.xml
@@ -36,26 +36,28 @@
                 android:text="@string/title_score_student"
                 android:textSize="24sp"
                 android:textStyle="bold" />
-
             <TextView
                 android:id="@+id/score_student_subject_name"
+                android:layout_gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
                 android:paddingTop="10dp"
                 android:text="@string/title_score_student"
-                android:textAlignment="center"
                 android:textSize="15sp"
                 android:textStyle="bold" />
-
-            <SearchView
-                android:id="@+id/scoreStudentSearch"
-                android:layout_width="220dp"
-                android:layout_height="27dp"
+            <androidx.appcompat.widget.SearchView
+                android:id="@+id/score_student_search_bar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:iconifiedByDefault="false"
-                android:queryHint="Tìm kiếm" />
-
+                android:layout_marginTop="10dp"
+                android:background="@drawable/border"
+                android:hint="@string/search"
+                android:inputType="text"
+                android:textAlignment="center"
+                android:textSize="16sp"
+                android:textStyle="italic"
+                android:autofillHints="" />
         </LinearLayout>
         <LinearLayout
             android:layout_weight="1"
@@ -73,5 +75,12 @@
                 android:dividerHeight="1sp" />
             <!-- End List View -->
         </LinearLayout>
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/button_score_student_save_pdf"
+            style="@style/button_style"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/button_background_2"
+            android:text="@string/button_score_student_save_file_pdf" />
     </LinearLayout>
 </LinearLayout>
